# SimpleGameEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: Animation.cpp  Animation.hpp  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  GameState.hpp  Random.cpp  Random.hpp  Resolution.cpp  Resolution.hpp  ResourceManager.hpp  State.hpp  StateFactory.cpp  StateFactory.hpp  StateName.hpp  StateOperation.hpp
states/: AbstractState.cpp  AbstractState.hpp  Animation.cpp  Assets.cpp  Assets.hpp  DummyState.cpp  DummyState.hpp  Resource.hpp  State.hpp  StateDummy.cpp  StateDummy.hpp  StateOperation.hpp
